--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,12 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "jupyter>=1.1.1",
+    "missingno>=0.5.2",
+    "mlflow>=1.27.0",
+    "pandas>=3.0.0",
+    "pyarrow>=23.0.0",
+    "scikit-learn>=1.8.0",
+    "seaborn>=0.13.2",
+]
