--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,13 +3,16 @@ name = "oc-mlops"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.13"
+requires-python = ">=3.12,<3.14"
 dependencies = [
+    "boto3>=1.42.44",
     "jupyter>=1.1.1",
     "missingno>=0.5.2",
-    "mlflow>=1.27.0",
-    "pandas>=3.0.0",
-    "pyarrow>=23.0.0",
-    "scikit-learn>=1.8.0",
+    "mlflow>=2.9.0,<3.0.0",
+    "pandas>=2.0.0,<3.0.0",
+    "protobuf>=3.19.0,<5",
+    "pyarrow>=14.0.0,<22",
+    "scikit-learn>=1.5.0",
     "seaborn>=0.13.2",
+    "setuptools>=68.0.0",
 ]
