--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,15 @@ requires-python = ">=3.12,<3.14"
 dependencies = [
     "boto3>=1.42.44",
     "jupyter>=1.1.1",
+    "lightgbm>=4.6.0",
     "missingno>=0.5.2",
     "mlflow>=2.9.0,<3.0.0",
+    "optuna>=4.7.0",
     "pandas>=2.0.0,<3.0.0",
     "protobuf>=3.19.0,<5",
     "pyarrow>=14.0.0,<22",
     "scikit-learn>=1.5.0",
     "seaborn>=0.13.2",
     "setuptools>=68.0.0",
+    "xgboost>=3.2.0",
 ]
